# ELLIOT

./: .gitignore  README  README.md  build.gradle  gradle.properties  settings.gradle
android/: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: classes.json
app/src/main/assets/database/: elliot.db
app/src/main/python/: .model.py.swp  model.py
app/src/main/res/drawable/: ic_baseline_arrow_back_green_24.xml  ic_baseline_radio_button_unchecked_24.xml  ic_round_view.xml
app/src/main/res/layout-land/: fragment_profile.xml  fragment_statistics.xml  list_suggestions.xml
deep_learning/: 2  CMakeLists.txt  README  app.py  cleanup_ingredients.py  create_nutrients_db.py  data_proc.py  eval.py  helpers.py  ing_keys.txt  ingredients.txt  ingredients_not_found.txt  model.h  model.java  model.py  new_ingredients.txt  notes.txt  nutrients.txt  onnx_app.py  outputs.txt  pending_ingredients.txt  search_not_found.txt  spider.py  spider_util.py  test.py  train.py  util.py
deep_learning/native/: model.cc  model.h
deep_learning/runs/simple_model/: events.out.tfevents.1643216709.largeee.12653.0  events.out.tfevents.1643217784.largeee.13357.0
gradle/wrapper/: gradle-wrapper.properties
models/: classes.json
plots/: .~lock.confusion_matrix_251.csv#  big_mob_confusion_matrix_251.csv  big_res_confusion_matrix_251.csv  big_res_confusion_matrix_251_aug.csv  confusion_matrix_251.csv  res_confusion_matrix_251.csv
scripts/: CMakeLists.txt  app.py  data_proc.py  helpers.py  make_dataset.ipynb  model.cc  model.h  model.py  train.py
(+172 files in other folders)
